# skiver

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  result_interpretation.md
.claude/: settings.local.json
docs/: hercules_reference.md  hmm_error_model.md  paper.md  paper_reference.md  pbsim3_reference.md
example/: SRR7498042.hazard_rate.csv  SRR7498042.kvmer.csv  SRR7498042.summary_error_rate.csv  SRR7498042.summary_error_spectrum.csv  SRR7498042.summary_error_spectrum_dependence_on_t.csv  SRR7498042.summary_phred.csv  SRR7498042.summary_read_position.csv
notebooks/: hmm_error_model.html  hmm_error_model.pt  hmm_error_model.qmd  profile_hmm.pt  profile_hmm_error_model.html  profile_hmm_error_model.qmd  skiver_results_hq_illumina_test.qmd  skiver_results_hq_illumina_train.qmd  skiver_results_lq_illumina_test.qmd  skiver_results_lq_illumina_train.qmd  skiver_results_ont_test.html  skiver_results_ont_test.qmd  skiver_results_ont_train.html  skiver_results_ont_train.qmd  skiver_results_pacbio_test.html  skiver_results_pacbio_test.qmd  skiver_results_pacbio_train.html  skiver_results_pacbio_train.qmd  skiver_results_template.qmd
scripts/: plot_all.py  plot_coverage.py  plot_error_spectrum_dependence_on_t.py  plot_hazard_survival_rate.py  plot_qscore_calibration.py  plot_read_position.py  plot_sbs96_spectrum.py  plot_spectrum.py  preparse_context_error_data.py  train_context_error_models.py  train_hmm_error_model.py  train_profile_hmm.py
src/: analyze.rs  avx2_seeding.rs  calibrate.rs  cmdline.rs  constants.rs  dump.rs  inference.rs  kvmer.rs  lib.rs  main.rs  (+6 more)
(+7 files in other folders)
