[package]
name = "skiver"
version = "0.2.0"
edition = "2024"

[dependencies]
needletail = "0.5.0"
rust-htslib = "0.44"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simple_logger=  { version = "3", features = ["stderr"] }
glob = "0.3.2"
clap = { version = "3", features = ["derive"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5.15"
rand = "0.9.2"
